# radiooooo-rust-cli

./: .env.example  .gitignore  Cargo.toml  README.md
data/: countries.json  favorites.json
src/: cli.rs  island_manager.rs  main.rs  playlist_manager.rs
