[package]
name = "radiooooo-rust-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "signal"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

colored = "2"
log = "0.4"
env_logger = "0.11"
inquire = "0.7"
chrono = "0.4.42"
